[package]
name = "workspace"
version = "0.1.0"
authors = ["Dgame <rswhite4@googlemail.com>"]
edition = "2018"
description = "Manage your git workspace"
license = "MIT"
repository = "https://github.com/Dgame/workspace"

[dependencies]
toml = "0.5.5"
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.7"
log = "0.4.8"
simple_logger = "1.4.0"
url = "2.1.0"
